objects/FODColorCode__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Color_Code__c</fullName>
        <label>Color Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Limit__c</fullName>
        <label>End Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Limit__c</fullName>
        <label>Start Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FODColorCode</label>
</CustomObject>